objects/ffban__Financial_Statement__c.object
<CustomObject>
    <description>Stores the configuration for Financial Statements.</description>
    <fields>
        <fullName>ffban__ColumnConfigurationValues__c</fullName>
        <description>The last column configuration saved.</description>
        <label>Column Configuration Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffban__Description__c</fullName>
        <description>The description of the financial statement.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffban__FilterValues__c</fullName>
        <description>The last configuration of filter values that was saved.</description>
        <label>Filter Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffban__RowConfigurationValues__c</fullName>
        <description>The last row configuration saved.</description>
        <label>Row Configuration Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Financial Statement</label>
    <listViews>
        <fullName>ffban__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ffban__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statements</pluralLabel>
    <recordTypes>
        <fullName>ffban__Income_Statement</fullName>
        <active>true</active>
        <description>Used to create an Income Statement.</description>
        <label>Income Statement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffban__Trial_Balance</fullName>
        <active>true</active>
        <description>Used to create a Trial Balance.</description>
        <label>Trial Balance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>